# Project-Simulation

c++/: CMakeLists.txt  bash.ps1  cmakeUse.md  compile_commands.json
c++/.cache/clangd/index/: function.cpp.1C7FC55C409D55F7.idx  function.hpp.34BB79F6C5832FC1.idx  main.cpp.F65C6E2729B1E939.idx  mymath.cpp.F73BAD524FBC4778.idx  mymath.hpp.99ABD3A7D9C173F2.idx
c++/CpuSimulation/: CMakeLists.txt  main.cpp
c++/CpuSimulation/include/: AddStrategy.h  CPU.h  ClockTickStrategy.h  CpuApplication.h  CpuSimulationLib.h  IncrementAllStrategy.h  MoveStrategy.h  Observer.h  RandomNoiseStrategy.h  RegisterChangeStrategy.h  RegisterDescriptorTable.h  RegisterFile.h  RegisterView.h  SimpleInstructionStrategy.h  Subject.h  TerminalObserver.h  register_base.h
c++/CpuSimulation/log/: Log.cpp  Log.h
c++/CpuSimulation/src/: CPU.cpp  CpuApplication.cpp  CpuSimulationLib.cpp  RegisterDescriptorTable.cpp  RegisterView.cpp  TerminalObserver.cpp
c++/algkit/: CMakeLists.txt  README.md  compile_commands.json  main.cpp
c++/algkit/.cache/clangd/index/: common.h.4A72A4701FD60F0A.idx  graph.cpp.47B25A1A74CC54FB.idx  graph.h.6DFF10A4BAFB8121.idx  graph.h.BA24C9C205E24D8B.idx  matrix.h.41F65FF1D60A6C59.idx  timer.cpp.F6E2C7F2449985CD.idx  timer.h.69A6B1080E5B3FA7.idx  timer.h.B4B8286D52D6BE67.idx
c++/algkit/include/: graph.h
c++/algkit/install/include/: common.h  graph.h  matrix.h  timer.h
c++/algkit/src/: common.cpp  graph.cpp  matrix.cpp  timer.cpp
c++/algorithm_visualization/: example.dot  graph.cpp  graph_test.cpp
c++/mathlib/: CMakeLists.txt
c++/mathlib/math/: mymath.cpp  mymath.hpp
c++/src/: main.cpp
c++/utils/: CMakeLists.txt
c++/utils/include/: function.hpp
c++/utils/src/: function.cpp
cmake/: README.md
cmake/000staticProject/: CMakeLists.txt
cmake/000staticProject/course/: CMakeLists.txt
cmake/000staticProject/course/include/: english.hpp
cmake/000staticProject/course/src/: chinese.cpp  english.cpp
cmake/000staticProject/name/include/: wang.hpp  wu.hpp  yan.hpp
cmake/000staticProject/name/src/: wang.cpp  yan.cpp
cmake/000staticProject/src/: CMakeLists.txt
cmake/000staticProject/study/: CMakeLists.txt
cmake/000staticProject/study/self/: CMakeLists.txt
cmake/000staticProject/study/self/src/: second.cpp
cmake/001staticProject/src/: CMakeLists.txt  main.cpp
cmake/001staticProject/study/together/: CMakeLists.txt
cmake/010sharedProject/course/: CMakeLists.txt
cmake/010sharedProject/course/include/: chinese.hpp  english.hpp  math.hpp
cmake/010sharedProject/name/: CMakeLists.txt
cmake/010sharedProject/name/include/: wang.hpp  wu.hpp  yan.hpp
cmake/010sharedProject/study/self/: CMakeLists.txt
cmake/010sharedProject/study/self/include/: first.hpp  second.hpp
cmake/010sharedProject/study/self/src/: first.cpp
cmake/010sharedProject/study/together/: CMakeLists.txt
cmake/020pythonProject/: CMakeLists.txt  README.md  test.py
cmake/021pythonProject/core/: CMakeLists.txt
cmake/021pythonProject/core/include/: sqlist.h
cmake/021pythonProject/core/src/: sqlist.c
cmake/022pythonProject/: CMakeLists.txt  example.cpp  t.py
cmake/022pythonProject/core/: CMakeLists.txt
cmake/022pythonProject/core/include/: sqlist.h
cmake/022pythonProject/core/src/: sqlist.c
cmake/030pythonProject/: CMakeLists.txt  README.md  bind.cpp  data_structure.cp311-win_amd64.pyd  main.py
cmake/030pythonProject/data_structure/: CMakeLists.txt
cmake/030pythonProject/data_structure/include/: sqlist.h
cmake/030pythonProject/data_structure/src/: sqlist.c
cmake/030pythonProject/transform/: CMakeLists.txt
cmake/030pythonProject/transform/include/: transform.hpp
cmake/030pythonProject/transform/src/: transform.cpp
cmake/031pythonProject/transform/: CMakeLists.txt
cmake/031pythonProject/transform/include/: transform.hpp
cmake/031pythonProject/transform/src/: transform.cpp
cmake/040staticlibProject/: CMakeLists.txt  compile_commands.json  main.c
cmake/041staticllibProject/: CMakeLists.txt  main.cpp
cmake/041staticllibProject/cxx_version/: CMakeLists.txt
cmake/041staticllibProject/cxx_version/src/: sqlist.cpp
cmake/041staticllibProject/data_structurelib/lib/: data_structurelib.lib
cmake/050staticlibpythonProject/: CMakeLists.txt  README.md  bind.cpp  compile_commands.json  data_structure.cp311-win_amd64.pyd  main.py
cmake/050staticlibpythonProject/data_structure_cxxlib/include/: sqlist.hpp
cmake/基本模版/: CMakeLists.txt  compile_commands.json
cmake/基本模版/web-page/: CMakeLists.txt
cmake/基本模版/web-page/implementation/: CMakeLists.txt
cmake/基本模版/web-page/interface/: CMakeLists.txt
mysql/Project/: CMakeLists.txt  README.md  main.cpp
mysql/Project/login/: CMakeLists.txt  README.md
mysql/Project/login/include/: LoginWindow.hpp  _LoginWindow.hpp
mysql/Project/login/src/: LoginWindow.cpp  _LoginWindow.cpp
mysql/Project/pages/: CMakeLists.txt  README.md
mysql/Project/pages/include/: MainPage.hpp  ShowPages.hpp
mysql/Project/pages/src/: MainPage.cpp  ShowPages.cpp
mysql/Project/sql/: CMakeLists.txt  README.md
mysql/Project/sql/00backup/: hotel_management_backup.sql
mysql/Project/sql/include/: SqlConnection.hpp  SqlQuery.hpp  _SqlConnection.hpp
mysql/Project/sql/src/: SqlConnection.cpp  SqlQuery.cpp  _SqlConnection.cpp
mysql/Project/tabs/: CMakeLists.txt
mysql/Project/tabs/include/: BillTab.hpp  BookingTab.hpp  EmployeeTab.hpp  HomeTab.hpp  MaintenanceTab.hpp  OrderTab.hpp  RoomsTab.hpp  ServiceTab.hpp  SettingsTab.hpp
mysql/Project/tabs/src/: BillTab.cpp  BookingTab.cpp  EmployeeTab.cpp  HomeTab.cpp  MaintenanceTab.cpp  OrderTab.cpp  RoomsTab.cpp  ServiceTab.cpp  SettingsTab.cpp
mysql/Project/test/: CMakeLists.txt  auto_test.cpp  login_test.cpp  pages_test.cpp  sql_test.cpp  tabs_test.cpp  utils_test.cpp
mysql/Project/test/wait_auto_code/: 00.cpp  01.cpp  02.cpp
mysql/Project/utils/: CMakeLists.txt
mysql/Project/utils/include/: ImageSlider.hpp  anim.hpp  out.hpp  path.hpp
mysql/Project/utils/src/: ImageSlider.cpp  anim.cpp  path.cpp
mysql/QtAndMysql/01连接数据库/: CMakeLists.txt  compile_commands.json  main.cpp
(+180 files in other folders)
