cmake_minimum_required(VERSION 3.25)
project(Hotel LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(M "auto" CACHE STRING "外部调用短名")
set(COMPILE_MODULE ${M} CACHE STRING "内部使用完整名. 可选编译模块:login/utils/sql/auto/pages/tabs/main")

message(STATUS "当前编译模块:${COMPILE_MODULE}")

set(QT_COMPONENTS Core Sql Widgets)
find_package(Qt6 REQUIRED COMPONENTS ${QT_COMPONENTS})

set(MODULE_DEPENDENCIES)
if(${COMPILE_MODULE} STREQUAL "login")
  list(APPEND MODULE_DEPENDENCIES utils sql login test)
elseif(${COMPILE_MODULE} STREQUAL "sql")
  list(APPEND MODULE_DEPENDENCIES utils sql test)
elseif(${COMPILE_MODULE} STREQUAL "pages")
  list(APPEND MODULE_DEPENDENCIES utils login tabs pages test)
elseif(${COMPILE_MODULE} STREQUAL "tabs")
  list(APPEND MODULE_DEPENDENCIES utils sql tabs test)
elseif(${COMPILE_MODULE} STREQUAL "auto")
  list(APPEND MODULE_DEPENDENCIES utils test)
elseif(${COMPILE_MODULE} STREQUAL "utils")
  list(APPEND MODULE_DEPENDENCIES utils test)
elseif(${COMPILE_MODULE} STREQUAL "main")
  list(APPEND MODULE_DEPENDENCIES utils sql login tabs pages)
else()
  message(FATAL_ERROF "未知编译模块: ${COMPILE_MODULE}")
endif()

foreach(MOD ${MODULE_DEPENDENCIES})
  message(STATUS "添加子目录: ${MOD}")
  add_subdirectory(${MOD})
endforeach()

if(${COMPILE_MODULE} STREQUAL "main")
  add_executable(main main.cpp)
  target_link_libraries(main PRIVATE utilsLib sqlLib pagesLib)
endif()
