cmake_minimum_required(VERSION 3.25)

if(${COMPILE_MODULE} STREQUAL "sql")
  add_executable(main sql_test.cpp)
  target_link_libraries(main PRIVATE sqlLib)
elseif(${COMPILE_MODULE} STREQUAL "login")
  add_executable(main login_test.cpp)
  target_link_libraries(main PRIVATE loginLib)
elseif(${COMPILE_MODULE} STREQUAL "utils")
  add_executable(main utils_test.cpp)
  target_link_libraries(main PRIVATE utilsLib)
elseif(${COMPILE_MODULE} STREQUAL "auto")
  set(CMAKE_AUTOMOC ON)
  set(CMAKE_AUTORCC ON)
  set(CMAKE_AUTOUIC ON)
  add_executable(main auto_test.cpp)
  target_link_libraries(main PRIVATE utilsLib Qt6::Widgets)
else()
  message(FATAL_ERROR "无效选项: ${COMPILE_MODULE}")
endif()
